remove parenthesis from home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ overview: true
 <div class="hero-unit">
     <h2>Developer @ VA</h2>
     <p>This is a repository of APIs and data related to the Department of Veterans Affairs (VA). These APIs, data, tools and resourecs are intended to provide developers with what they need to develop web and mobile applications, design data visualizations and stories using resources from the VA.</p>
-    <p align="center">(<span style="color:#FF0000; font-size:18px; font-weight: bold:"><strong>This is not an official VA website, the goal is to show VA what is possible!</strong></span>)</p>
+    <p align="center"><span style="color:#FF0000; font-size:18px; font-weight: bold:"><strong>This is not an official VA website, the goal is to show VA what is possible!</strong></span></p>
     <p><a href="/va-developer/getting-started.html" class="btn btn-primary btn-large">Getting Started &raquo;</a></p>
 </div>
 <div class="row-fluid">
