roadmap js tweeks

--- a/support/index.html
+++ b/support/index.html
@@ -6,9 +6,8 @@ overview: true
 
 <h2>Support</h2>
 <p>There are two distinct ways to get support around the VA developers area. 1) Self-Service Support and 2) Direct Support. We encourage you to use self-service support mechanisms as this can be done askynchronously and often meet your needs immediatly. If you cannot get your question answered this way, please contact us directly and we'll respond as soon as possible.</p>
-<div class="row-fluid">
-    <div class="span1">&nbsp;</div>
-    <div class="span5">
+<div class="row">
+    <div class="span6">
         
         {% raw  %}
         <script id="selfServiceSupportListingTemplate" type="text/template">       
@@ -34,7 +33,7 @@ overview: true
         <h2>Self-Service Support</h2>
         <ul id="selfServiceSupportListing"></ul>
     </div>
-    <div class="span5">
+    <div class="span6">
         
         {% raw  %}
         <script id="directSupportListingTemplate" type="text/template">       
@@ -60,5 +59,5 @@ overview: true
         <h2>Direct Support</h2>
         <ul id="directSupportListing"></ul>
     </div>
-    <p>Support is critical to the success of this developers portal. Please provide feedback and help us make sure this program is successful. Open data and APIs are a partnership between us, the provider and you the developer / consumer.</p>
 </div>
+<p>Support is critical to the success of this developers portal. Please provide feedback and help us make sure this program is successful. Open data and APIs are a partnership between us, the provider and you the developer / consumer.</p>
