--- a/code/index.html
+++ b/code/index.html
@@ -39,7 +39,7 @@ function listCode()
             $('#codeListing').append(html);  
             
             id = val['Code_ID'];
-            alert(id);
+           // alert(id);
             gist = val['Gist'];  
             
             html = "<script type='text/javascript' src='" + gist + "'></" + "script>";
