--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -31,7 +31,9 @@ overview: true
         </script>      
 
         <h3>Roadmap</h3>
-        <ul id="roadmapListing"></ul>
+        <div style="height: 400px; overflow: auto;">
+            <ul id="roadmapListing"></ul>
+        </div>
         
     </div>
     <div class="span6">
@@ -58,7 +60,9 @@ overview: true
         </script>      
 
         <h3>Changelog</h3>
-        <ul id="changelogListing"></ul>
+        <div style="height: 400px; overflow: auto;">
+            <ul id="changelogListing"></ul>
+        </div>
         
     </div>
 </div>
