--- a/support/index.html
+++ b/support/index.html
@@ -31,7 +31,9 @@ overview: true
         </script>      
 
         <h3>Self-Service Support</h3>
-        <ul id="selfServiceSupportListing"></ul>
+        <div style="height: 400px; overflow: auto;">
+            <ul id="selfServiceSupportListing"></ul>
+        </div>
     </div>
     <div class="span6">
         
@@ -57,7 +59,9 @@ overview: true
         </script>      
 
         <h3>Direct Support</h3>
-        <ul id="directSupportListing"></ul>
+        <div style="height: 400px; overflow: auto;">
+            <ul id="directSupportListing"></ul>
+        </div>
     </div>
 </div>
 <br />
