--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -30,6 +30,10 @@ overview: true
         listRoadmap();
         </script>      
 
+        <ul class="toolbar">
+            <li>{"<a href="http://kinlane.github.io/va-developer/roadmap/roadmap.json" title="JSON" target="_blank">JSON</a>"}</li>
+        </ul>
+
         <h3>Roadmap</h3>
         <div style="height: 300px; overflow: auto;">
             <ul id="roadmapListing"></ul>
@@ -58,6 +62,10 @@ overview: true
             } 
         listChangelog();
         </script>      
+
+        <ul class="toolbar">
+            <li>{"<a href="http://kinlane.github.io/va-developer/support/changelog.json" title="JSON" target="_blank">JSON</a>"}</li>
+        </ul>
 
         <h3>Changelog</h3>
         <div style="height: 300px; overflow: auto;">
