--- a/code/index.html
+++ b/code/index.html
@@ -4,8 +4,10 @@ title: Code
 overview: true
 ---
 
+<ul class="toolbar">
+    <li>{"<a href="http://kinlane.github.io/va-developer/code/code.json" title="JSON" target="_blank">JSON</a>"}</li>
+</ul>
 <h2>Code</h2>
-
 <p>Here are some code samples available for use against VA APIs and datasets, currently these are just samples to act as placeholders and show what is possible, but soon these will be functional code samples that work with specific or collection of APIs and datasets.</p>
 
 <!-- Begin List Code Samples--->
