--- a/data/index.html
+++ b/data/index.html
@@ -4,6 +4,9 @@ title: Data
 overview: true
 ---
 
+<ul class="toolbar">
+    <li>{"<a href="http://kinlane.github.io/va-developer/data.json" title="JSON" target="_blank">JSON</a>"}</li>
+</ul>
 <h2>Data</h2>
 <p>This is a listing of datasets currently available from the Department of Veterans Affairs. Some of these datasets are also available via an API, but this represents a complete lists of files, which are also represented in the data.json file.</p>
 
