--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,8 +4,10 @@ title: Gallery
 overview: Gallery
 ---
 
+<ul class="toolbar">
+    <li>{"<a href="http://kinlane.github.io/va-developer/gallery/gallery.json" title="JSON" target="_blank">JSON</a>"}</li>
+</ul>
 <h2>Gallery</h2>
-
 <p>Here are some examples of what is possible with developer around VA APIs and data. This gallery is not limited to web and mobile applications, but also contain visualizations, spreadsheet integrations and much more.</p>
 
 <!-- Begin List Code Samples--->
