update support and roadmap footers

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -75,4 +75,4 @@ overview: true
     </div>
 </div>
 <br />
-<p>To provide feedback on our roadmap, visit the <a href="../support/">support section</a>, and provide us feedback through one of our existing support channels.</p>
+<p align="center">To provide feedback on our roadmap, visit the <a href="../support/">support section</a>, and provide us feedback through one of our existing support channels.</p>
