--- a/support/index.html
+++ b/support/index.html
@@ -68,4 +68,4 @@ overview: true
     </div>
 </div>
 <br />
-<p>Support is critical to the success of this developers portal. Please provide feedback and help us make sure this program is successful. Open data and APIs are a partnership between us, the provider and you the developer / consumer.</p>
+<p align="center">Support is critical to the success of this developers portal. Please provide feedback and help us make sure this program is successful. Open data and APIs are a partnership between us, the provider and you the developer / consumer.</p>
