--- a/sitemap.html
+++ b/sitemap.html
@@ -10,7 +10,7 @@ overview: true
 <h2>Sitemap</h2>
 <p>This is a listing of all the pages, and building blocks that make up the Developer @ VA portal.  Everything here you can navigate via HTML and programmatically via JSON, all accessible from this single sitemap.</p>
 <div class="row">
-    <div class="span2">&nbsp;</span>
+    <div class="span2">&nbsp;</div>
     <div class="span4">
         
         {% raw  %}
@@ -67,5 +67,5 @@ overview: true
             <ul id="sitemapBuildingBlocksListing"></ul>
         </div>
     </div>
-    <div class="span2">&nbsp;</span>
+    <div class="span2">&nbsp;</div>
 </div>
