--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@ overview: true
 </ul>
 <h2>Code</h2>
 <p>Here are some code samples available for use against VA APIs and datasets, currently these are just samples to act as placeholders and show what is possible, but soon these will be functional code samples that work with specific or collection of APIs and datasets.</p>
-<p align="center"><i>This page is still having issues displaying gists</i></p>
+<p align="center"><i>This page is still having issues displaying and mixing gists</i></p>
 <!-- Begin List Code Samples--->
 {% raw  %}
 <script id="codeListingTemplate" type="text/template">    
