update home page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ overview: true
         
         {% raw  %}
         <script id="apiListingTemplate" type="text/template">       
-            <li><a href="apis/index.html?#{{name}}"><strong>{{name}}</strong></a></li>                                                                                               
+            <li><a href="api/index.html?#{{name}}"><strong>{{name}}</strong></a></li>                                                                                               
         </script>
         {% endraw %}        
         
