--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -18,7 +18,7 @@ overview: true
         <script type="text/javascript">
         function listRoadmap()
             {
-            $.getJSON('roadmap.json', function(data) {
+            $.getJSON('/va-developer/data/roadmap.json', function(data) {
                 toggle = 0;
                  $.each(data['Roadmap'], function(key, val) {
                     var template = $('#roadmapListingTemplate').html();
@@ -31,7 +31,7 @@ overview: true
         </script>      
 
         <ul class="toolbar">
-            <li>{"<a href="http://kinlane.github.io/va-developer/roadmap/roadmap.json" title="JSON" target="_blank">JSON</a>"}</li>
+            <li>{"<a href="http://kinlane.github.io/va-developer/data/roadmap.json" title="JSON" target="_blank">JSON</a>"}</li>
         </ul>
 
         <h3>Roadmap</h3>
@@ -51,7 +51,7 @@ overview: true
         <script type="text/javascript">
         function listChangelog()
             {
-            $.getJSON('changelog.json', function(data) {
+            $.getJSON('/va-developer/data/changelog.json', function(data) {
                 toggle = 0;
                  $.each(data['Changelog'], function(key, val) {
                     var template = $('#changelogListingTemplate').html();
@@ -64,7 +64,7 @@ overview: true
         </script>      
 
         <ul class="toolbar">
-            <li>{"<a href="http://kinlane.github.io/va-developer/support/changelog.json" title="JSON" target="_blank">JSON</a>"}</li>
+            <li>{"<a href="http://kinlane.github.io/va-developer/data/changelog.json" title="JSON" target="_blank">JSON</a>"}</li>
         </ul>
 
         <h3>Changelog</h3>
