--- a/support/index.html
+++ b/support/index.html
@@ -5,7 +5,7 @@ overview: true
 ---
 
 <ul class="toolbar">
-    <li>{"<a href="http://kinlane.github.io/va-developer/support/support.json" title="JSON" target="_blank">JSON</a>"}</li>
+    <li>{"<a href="http://kinlane.github.io/va-developer/data/support.json" title="JSON" target="_blank">JSON</a>"}</li>
 </ul>
 <h2>Support</h2>
 <p>There are two distinct ways to get support around the VA developers area. 1) Self-Service Support and 2) Direct Support. We encourage you to use self-service support mechanisms as this can be done askynchronously and often meet your needs immediatly. If you cannot get your question answered this way, please contact us directly and we'll respond as soon as possible.</p>
@@ -21,7 +21,7 @@ overview: true
         <script type="text/javascript">
         function listAPIs()
             {
-            $.getJSON('support.json', function(data) {
+            $.getJSON('/va-developer/data/support.json', function(data) {
                 toggle = 0;
                  $.each(data['Self-Service Support'], function(key, val) {
                     var template = $('#selfServiceSupportListingTemplate').html();
@@ -49,7 +49,7 @@ overview: true
         <script type="text/javascript">
         function listAPIs()
             {
-            $.getJSON('support.json', function(data) {
+            $.getJSON('/va-developer/data/support.json', function(data) {
                 toggle = 0;
                  $.each(data['Direct Support'], function(key, val) {
                     var template = $('#directSupportListingTemplate').html();
