--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ overview: true
         </div>
         <br />
         <p><a class="btn" href="#">View Data &raquo;</a></p>
-    </div><!--/span-->
+    </div>
     <div class="span3">
         
         {% raw  %}
@@ -101,5 +101,5 @@ overview: true
         </div>
         <br />
         <p><a class="btn" href="code/">View Code &raquo;</a></p>
-    </div><!--/span-->
-</div><!--/row-->
+    </div>
+</div>
